myCpp/proj5/parse.output
Terminals which are not used

   COMMA


Grammar

    0 $accept: start $end

    1 start: start funcdef
    2      | /* empty */

    3 funcdef: DEF MAIN LPAREN RPAREN COLON stmt END
    4        | CR

    5 stmt: line CR stmt
    6     | selection CR stmt
    7     | CR stmt
    8     | /* empty */

    9 selection: IF expr COLON stmt ELSE END
   10          | IF expr COLON stmt ELSE COLON stmt END

   11 line: IDENT ASSIGN expr
   12     | IDENT LPAREN RPAREN
   13     | PRINT expr
   14     | RETURN expr

   15 expr: expr PLUS expr
   16     | expr MINUS expr
   17     | expr MULT expr
   18     | expr EXPON expr
   19     | expr DIV expr
   20     | expr MOD expr
   21     | expr LESS expr
   22     | expr LESSEQ expr
   23     | expr GREAT expr
   24     | expr GREATEQ expr
   25     | expr NOTEQ expr
   26     | expr EQ expr
   27     | MINUS expr
   28     | NUMBER
   29     | IDENT
   30     | LPAREN expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 28
CR (259) 4 5 6 7
ASSIGN (260) 11
PRINT (261) 13
IDENT (262) 11 12 29
LPAREN (263) 3 12 30
RPAREN (264) 3 12 30
DEF (265) 3
COLON (266) 3 9 10
COMMA (267)
IF (268) 9 10
END (269) 3 9 10
ELSE (270) 9 10
RETURN (271) 14
MAIN (272) 3
NOTEQ (273) 25
EQ (274) 26
GREATEQ (275) 24
GREAT (276) 23
LESSEQ (277) 22
LESS (278) 21
MINUS (279) 16 27
PLUS (280) 15
MOD (281) 20
DIV (282) 19
MULT (283) 17
EXPON (284) 18
UMINUS (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
start (32)
    on left: 1 2, on right: 0 1
funcdef (33)
    on left: 3 4, on right: 1
stmt (34)
    on left: 5 6 7 8, on right: 3 5 6 7 9 10
selection (35)
    on left: 9 10, on right: 6
line (36)
    on left: 11 12 13 14, on right: 5
expr (37)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30,
    on right: 9 10 11 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    30


state 0

    0 $accept: . start $end

    $default  reduce using rule 2 (start)

    start  go to state 1


state 1

    0 $accept: start . $end
    1 start: start . funcdef

    $end  shift, and go to state 2
    CR    shift, and go to state 3
    DEF   shift, and go to state 4

    funcdef  go to state 5


state 2

    0 $accept: start $end .

    $default  accept


state 3

    4 funcdef: CR .

    $default  reduce using rule 4 (funcdef)


state 4

    3 funcdef: DEF . MAIN LPAREN RPAREN COLON stmt END

    MAIN  shift, and go to state 6


state 5

    1 start: start funcdef .

    $default  reduce using rule 1 (start)


state 6

    3 funcdef: DEF MAIN . LPAREN RPAREN COLON stmt END

    LPAREN  shift, and go to state 7


state 7

    3 funcdef: DEF MAIN LPAREN . RPAREN COLON stmt END

    RPAREN  shift, and go to state 8


state 8

    3 funcdef: DEF MAIN LPAREN RPAREN . COLON stmt END

    COLON  shift, and go to state 9


state 9

    3 funcdef: DEF MAIN LPAREN RPAREN COLON . stmt END

    CR      shift, and go to state 10
    PRINT   shift, and go to state 11
    IDENT   shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14

    $default  reduce using rule 8 (stmt)

    stmt       go to state 15
    selection  go to state 16
    line       go to state 17


state 10

    7 stmt: CR . stmt

    CR      shift, and go to state 10
    PRINT   shift, and go to state 11
    IDENT   shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14

    $default  reduce using rule 8 (stmt)

    stmt       go to state 18
    selection  go to state 16
    line       go to state 17


state 11

   13 line: PRINT . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 23


state 12

   11 line: IDENT . ASSIGN expr
   12     | IDENT . LPAREN RPAREN

    ASSIGN  shift, and go to state 24
    LPAREN  shift, and go to state 25


state 13

    9 selection: IF . expr COLON stmt ELSE END
   10          | IF . expr COLON stmt ELSE COLON stmt END

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 26


state 14

   14 line: RETURN . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 27


state 15

    3 funcdef: DEF MAIN LPAREN RPAREN COLON stmt . END

    END  shift, and go to state 28


state 16

    6 stmt: selection . CR stmt

    CR  shift, and go to state 29


state 17

    5 stmt: line . CR stmt

    CR  shift, and go to state 30


state 18

    7 stmt: CR stmt .

    $default  reduce using rule 7 (stmt)


state 19

   28 expr: NUMBER .

    $default  reduce using rule 28 (expr)


state 20

   29 expr: IDENT .

    $default  reduce using rule 29 (expr)


state 21

   30 expr: LPAREN . expr RPAREN

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 31


state 22

   27 expr: MINUS . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 32


state 23

   13 line: PRINT expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    NOTEQ    shift, and go to state 33
    EQ       shift, and go to state 34
    GREATEQ  shift, and go to state 35
    GREAT    shift, and go to state 36
    LESSEQ   shift, and go to state 37
    LESS     shift, and go to state 38
    MINUS    shift, and go to state 39
    PLUS     shift, and go to state 40
    MOD      shift, and go to state 41
    DIV      shift, and go to state 42
    MULT     shift, and go to state 43
    EXPON    shift, and go to state 44

    $default  reduce using rule 13 (line)


state 24

   11 line: IDENT ASSIGN . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 45


state 25

   12 line: IDENT LPAREN . RPAREN

    RPAREN  shift, and go to state 46


state 26

    9 selection: IF expr . COLON stmt ELSE END
   10          | IF expr . COLON stmt ELSE COLON stmt END
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    COLON    shift, and go to state 47
    NOTEQ    shift, and go to state 33
    EQ       shift, and go to state 34
    GREATEQ  shift, and go to state 35
    GREAT    shift, and go to state 36
    LESSEQ   shift, and go to state 37
    LESS     shift, and go to state 38
    MINUS    shift, and go to state 39
    PLUS     shift, and go to state 40
    MOD      shift, and go to state 41
    DIV      shift, and go to state 42
    MULT     shift, and go to state 43
    EXPON    shift, and go to state 44


state 27

   14 line: RETURN expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    NOTEQ    shift, and go to state 33
    EQ       shift, and go to state 34
    GREATEQ  shift, and go to state 35
    GREAT    shift, and go to state 36
    LESSEQ   shift, and go to state 37
    LESS     shift, and go to state 38
    MINUS    shift, and go to state 39
    PLUS     shift, and go to state 40
    MOD      shift, and go to state 41
    DIV      shift, and go to state 42
    MULT     shift, and go to state 43
    EXPON    shift, and go to state 44

    $default  reduce using rule 14 (line)


state 28

    3 funcdef: DEF MAIN LPAREN RPAREN COLON stmt END .

    $default  reduce using rule 3 (funcdef)


state 29

    6 stmt: selection CR . stmt

    CR      shift, and go to state 10
    PRINT   shift, and go to state 11
    IDENT   shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14

    $default  reduce using rule 8 (stmt)

    stmt       go to state 48
    selection  go to state 16
    line       go to state 17


state 30

    5 stmt: line CR . stmt

    CR      shift, and go to state 10
    PRINT   shift, and go to state 11
    IDENT   shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14

    $default  reduce using rule 8 (stmt)

    stmt       go to state 49
    selection  go to state 16
    line       go to state 17


state 31

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr
   30     | LPAREN expr . RPAREN

    RPAREN   shift, and go to state 50
    NOTEQ    shift, and go to state 33
    EQ       shift, and go to state 34
    GREATEQ  shift, and go to state 35
    GREAT    shift, and go to state 36
    LESSEQ   shift, and go to state 37
    LESS     shift, and go to state 38
    MINUS    shift, and go to state 39
    PLUS     shift, and go to state 40
    MOD      shift, and go to state 41
    DIV      shift, and go to state 42
    MULT     shift, and go to state 43
    EXPON    shift, and go to state 44


state 32

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr
   27     | MINUS expr .

    $default  reduce using rule 27 (expr)


state 33

   25 expr: expr NOTEQ . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 51


state 34

   26 expr: expr EQ . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 52


state 35

   24 expr: expr GREATEQ . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 53


state 36

   23 expr: expr GREAT . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 54


state 37

   22 expr: expr LESSEQ . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 55


state 38

   21 expr: expr LESS . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 56


state 39

   16 expr: expr MINUS . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 57


state 40

   15 expr: expr PLUS . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 58


state 41

   20 expr: expr MOD . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 59


state 42

   19 expr: expr DIV . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 60


state 43

   17 expr: expr MULT . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 61


state 44

   18 expr: expr EXPON . expr

    NUMBER  shift, and go to state 19
    IDENT   shift, and go to state 20
    LPAREN  shift, and go to state 21
    MINUS   shift, and go to state 22

    expr  go to state 62


state 45

   11 line: IDENT ASSIGN expr .
   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    NOTEQ    shift, and go to state 33
    EQ       shift, and go to state 34
    GREATEQ  shift, and go to state 35
    GREAT    shift, and go to state 36
    LESSEQ   shift, and go to state 37
    LESS     shift, and go to state 38
    MINUS    shift, and go to state 39
    PLUS     shift, and go to state 40
    MOD      shift, and go to state 41
    DIV      shift, and go to state 42
    MULT     shift, and go to state 43
    EXPON    shift, and go to state 44

    $default  reduce using rule 11 (line)


state 46

   12 line: IDENT LPAREN RPAREN .

    $default  reduce using rule 12 (line)


state 47

    9 selection: IF expr COLON . stmt ELSE END
   10          | IF expr COLON . stmt ELSE COLON stmt END

    CR      shift, and go to state 10
    PRINT   shift, and go to state 11
    IDENT   shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14

    $default  reduce using rule 8 (stmt)

    stmt       go to state 63
    selection  go to state 16
    line       go to state 17


state 48

    6 stmt: selection CR stmt .

    $default  reduce using rule 6 (stmt)


state 49

    5 stmt: line CR stmt .

    $default  reduce using rule 5 (stmt)


state 50

   30 expr: LPAREN expr RPAREN .

    $default  reduce using rule 30 (expr)


state 51

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   25     | expr NOTEQ expr .
   26     | expr . EQ expr

    MINUS  shift, and go to state 39
    PLUS   shift, and go to state 40
    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 25 (expr)


state 52

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr
   26     | expr EQ expr .

    MINUS  shift, and go to state 39
    PLUS   shift, and go to state 40
    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 26 (expr)


state 53

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   24     | expr GREATEQ expr .
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    MINUS  shift, and go to state 39
    PLUS   shift, and go to state 40
    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 24 (expr)


state 54

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   23     | expr GREAT expr .
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    MINUS  shift, and go to state 39
    PLUS   shift, and go to state 40
    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 23 (expr)


state 55

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   22     | expr LESSEQ expr .
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    MINUS  shift, and go to state 39
    PLUS   shift, and go to state 40
    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 22 (expr)


state 56

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   21     | expr LESS expr .
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    MINUS  shift, and go to state 39
    PLUS   shift, and go to state 40
    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 21 (expr)


state 57

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   16     | expr MINUS expr .
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 16 (expr)


state 58

   15 expr: expr . PLUS expr
   15     | expr PLUS expr .
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    MOD    shift, and go to state 41
    DIV    shift, and go to state 42
    MULT   shift, and go to state 43
    EXPON  shift, and go to state 44

    $default  reduce using rule 15 (expr)


state 59

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   20     | expr MOD expr .
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    EXPON  shift, and go to state 44

    $default  reduce using rule 20 (expr)


state 60

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   19     | expr . DIV expr
   19     | expr DIV expr .
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    EXPON  shift, and go to state 44

    $default  reduce using rule 19 (expr)


state 61

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   17     | expr MULT expr .
   18     | expr . EXPON expr
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    EXPON  shift, and go to state 44

    $default  reduce using rule 17 (expr)


state 62

   15 expr: expr . PLUS expr
   16     | expr . MINUS expr
   17     | expr . MULT expr
   18     | expr . EXPON expr
   18     | expr EXPON expr .
   19     | expr . DIV expr
   20     | expr . MOD expr
   21     | expr . LESS expr
   22     | expr . LESSEQ expr
   23     | expr . GREAT expr
   24     | expr . GREATEQ expr
   25     | expr . NOTEQ expr
   26     | expr . EQ expr

    $default  reduce using rule 18 (expr)


state 63

    9 selection: IF expr COLON stmt . ELSE END
   10          | IF expr COLON stmt . ELSE COLON stmt END

    ELSE  shift, and go to state 64


state 64

    9 selection: IF expr COLON stmt ELSE . END
   10          | IF expr COLON stmt ELSE . COLON stmt END

    COLON  shift, and go to state 65
    END    shift, and go to state 66


state 65

   10 selection: IF expr COLON stmt ELSE COLON . stmt END

    CR      shift, and go to state 10
    PRINT   shift, and go to state 11
    IDENT   shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14

    $default  reduce using rule 8 (stmt)

    stmt       go to state 67
    selection  go to state 16
    line       go to state 17


state 66

    9 selection: IF expr COLON stmt ELSE END .

    $default  reduce using rule 9 (selection)


state 67

   10 selection: IF expr COLON stmt ELSE COLON stmt . END

    END  shift, and go to state 68


state 68

   10 selection: IF expr COLON stmt ELSE COLON stmt END .

    $default  reduce using rule 10 (selection)
